--- a/app.json
+++ b/app.json
@@ -1,22 +1,10 @@
 {
-  "name": "Start on Heroku: Python",
-  "description": "A barebones Python app, which can easily be deployed to Heroku.",
-  "image": "heroku/python",
-  "repository": "https://github.com/heroku/python-getting-started",
-  "keywords": ["python", "django" ],
-  "addons": [ "heroku-postgresql" ],
+  "name": "VPS BY RixEtte",
+  "description": "Deploy VNC to Heroku.",
+  "keywords": ["VNC", "Docker"],
   "env": {
-    "SECRET_KEY": {
-      "description": "The secret key for the Django application.",
-      "generator": "secret"
-    }
   },
-  "environments": {
-    "test": {
-      "scripts": {
-        "test-setup": "python manage.py collectstatic --noinput",
-        "test": "python manage.py test"
-      }
-    }
-  }
-}
+  "website": "",
+  "repository": "",
+  "stack": "container"
+ }
